Base app updated to 6.3.1

--- a/App/AppInfo/appinfo.ini
+++ b/App/AppInfo/appinfo.ini
@@ -9,7 +9,7 @@ Publisher=Giorgio Tani & PortableApps.com
 Homepage=http://portableapps.com/apps/utilities/peazip_portable
 Donate=http://peazip.org/donations.html
 Category=Utilities
-Description=File archiver with support for 7z, ZIP, GZIP, BZIP2, TAR, RAR, etc
+Description=File archiver
 Language=Multilingual
 
 [License]
@@ -19,8 +19,8 @@ Freeware=true
 CommercialUse=true
 
 [Version]
-PackageVersion=6.3.0.0
-DisplayVersion=6.3.0
+PackageVersion=6.3.1.0
+DisplayVersion=6.3.1
 
 [Control]
 Icons=1
